--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,14 +1,28 @@
 @font-face {
-  font-family: "OpenSans";
-  src: url("/fonts/OpenSans-Regular.woff") format("woff");
+  font-family: "Courgette-Regular";
+  src: url("./Courgette-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-    font-family: "OpenSans";
-    src: url("/fonts/OpenSans-Medium.woff") format("woff");
-    font-weight: 500;
-    font-style: normal;
-  }
-  
+  font-family: "Lato-Bold";
+  src: url("./Lato-Bold.woff2") format("woff2");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Lato-Bold";
+  src: url("./Lato-Bold.woff2") format("woff2");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Limelight-Regular";
+  src: url("./Limelight-Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
